ajuste nos níveis

--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -253,7 +253,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -279,7 +279,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -305,7 +305,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -331,7 +331,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -357,7 +357,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -383,7 +383,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -409,7 +409,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -435,7 +435,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -461,7 +461,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -487,7 +487,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -512,7 +512,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -538,7 +538,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -564,7 +564,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -590,7 +590,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -616,7 +616,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -642,7 +642,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -668,7 +668,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -694,7 +694,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -720,7 +720,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -746,7 +746,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
@@ -772,7 +772,7 @@
                                       aria-haspopup="true" aria-expanded="false">Ações
                               </button>
                               <div class="dropdown-menu">
-                                <a class="dropdown-item" href="editar--niveis.html"><i class="fa fa-pencil-square-o mr-xs"
+                                <a class="dropdown-item" href="niveis--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                      aria-hidden="true"></i>
                                   Editar</a>
                                 <a class="dropdown-item" href="#"><i class="fa fa-files-o mr-xs" aria-hidden="true"></i>
