--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -199,7 +199,7 @@
                                     aria-haspopup="true" aria-expanded="false">Ações
                             </button>
                             <div class="dropdown-menu">
-                              <a class="dropdown-item" href="editar--posto.html"><i class="fa fa-pencil-square-o mr-xs"
+                              <a class="dropdown-item" href="posto--editar.html"><i class="fa fa-pencil-square-o mr-xs"
                                                                    aria-hidden="true"></i>
                                 Editar</a>
                               <div class="dropdown-divider"></div>
