Inclui os bens cancelar

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -434,13 +434,16 @@
                   <textarea rows="4" class="form-control" placeholder="Objetivos"></textarea>
                 </div>
               </div>
-              
+
               <div class="row divider-top">
                 <div class="col-sm-12">
-                  <button type="button" class="btn btn-primary btn-success"><i
-                          class="fa fa-floppy-o mr-xs"
-                          aria-hidden="true"></i>
-                    Salvar
+                  <button type="button" class="btn btn-primary btn-success">
+                    <i class="fa fa-floppy-o mr-xs" aria-hidden="true"></i>
+                  Salvar
+                  </button>
+                  <button type="button" class="btn btn-secondary ml-sm">
+                    <i class="fa fa-ban mr-xs" aria-hidden="true"></i>
+                    Cancelar
                   </button>
                 </div>
               </div>
