--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -481,6 +481,10 @@
                           aria-hidden="true"></i>
                     Salvar
                   </button>
+                  <button type="button" class="btn btn-secondary ml-sm">
+                    <i class="fa fa-ban mr-xs" aria-hidden="true"></i>
+                    Cancelar
+                  </button>
                 </div>
               </div>
             </section>
