Ajustes - pos reunião

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -423,8 +423,8 @@
                 <div class="col-lg-4">
                   <label class="form-label semibold" for="">Classificação</label>
                   <select class="select2 select2-arrow">
-                    <option>Regular</option>
-                    <option>Único</option>
+                    <option>Nível único</option>
+                    <option>Multi níveis</option>
                   </select>
                 </div>
               </div>
