--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -100,9 +100,8 @@
                         </div>
                       </div>
                       <div class="row">
-                        <div class="col-sm-12">
-                          <label class="form-label semibold" for="">Grupos<span
-                                  class="semibold text-danger h4">*</span></label>
+                        <div class="col-sm-8">
+                          <label class="form-label semibold" for="">Grupos</label>
                           <select class="select2" multiple="multiple">
                             <option>Crianças</option>
                             <option>Jovens e adultos</option>
@@ -110,6 +109,22 @@
                             <option>TOP KIDS</option>
                             <option>JUNIOR</option>
                           </select>
+                        </div>
+                        <div class="col-sm-4">
+                          <label class="form-label semibold" for="">Pendentes</label>
+                          <div class="form-group">
+                            <div class="btn-group btn-group-sm" data-toggle="buttons">
+                              <label class="btn btn-secondary-outline active">
+                                <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Todos
+                              </label>
+                              <label class="btn btn-secondary-outline">
+                                <input type="radio" name="options" id="option2" autocomplete="off"> Sim
+                              </label>
+                              <label class="btn btn-secondary-outline">
+                                <input type="radio" name="options" id="option2" autocomplete="off"> Não
+                              </label>
+                            </div>
+                          </div>
                         </div>
                       </div>
                       <div class="row">
