--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -305,18 +305,24 @@
                 </div>
               </div>
               <div class="row mt-md divider-top">
-                <div class="col-lg-6">
+                <div class="col-lg-9">
                   <fieldset class="form-group">
                     <label class="form-label semibold" for="">Nome do grupo <span
                             class="semibold text-danger h4">*</span></label>
                     <input type="text" class="form-control" id="" placeholder="Nome do grupo">
                   </fieldset>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-3">
                   <div class="checkbox-toggle mt-lg">
                     <input type="checkbox" id="check-toggle-1"/>
                     <label class="form-label" for="check-toggle-1">Ativo</label>
                   </div>
+                </div>
+              </div>
+              <div class="row mb-lg">
+                <div class="col-sm-12">
+                  <label class="form-label semibold" for="">Descrição</label>
+                  <textarea rows="4" class="form-control" placeholder="Descrição"></textarea>
                 </div>
               </div>
               <div class="row divider-top pb-md">
