--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -91,20 +91,26 @@
               </div>
               <form id="form-signin_v1" name="form-signin_v1" method="post">
               <div class="row mt-md divider-top">
-                <div class="col-lg-6">
+                <div class="col-lg-9">
                   <fieldset class="form-group">
                     <label class="form-label semibold" for="">Nome do grupo <span
                             class="semibold text-danger h4">*</span></label>
                     <input id="nome-grupo" class="form-control" name="signin_v1[<strong>Nome do grupo</strong>]" type="text" data-validation="[NOTEMPTY]" value="Adolescente">
                   </fieldset>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-3">
                   <div class="checkbox-toggle mt-lg">
                     <input type="checkbox" id="check-toggle-1"/>
                     <label class="form-label" for="check-toggle-1">Ativo</label>
                   </div>
                 </div>
               </div>
+                <div class="row mb-lg">
+                  <div class="col-sm-12">
+                    <label class="form-label semibold" for="">Descrição</label>
+                    <textarea rows="4" class="form-control" placeholder="Descrição">Grupo de cursos destinado a adolescentes, de 14 a 18 anos</textarea>
+                  </div>
+                </div>
                 <div class="row divider-top pb-md">
                   <div class="col-sm-12">
                     <button type="button" class="btn btn-success" id="notie-success"> <i class="fa fa-floppy-o mr-xs"></i> Salvar</button>
