--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -79,7 +79,7 @@
                         <div class="row">
                           <div class="col-sm-6">
                             <fieldset class="form-group mb-0">
-                              <label class="form-label semibold" for="">Quatidade de unidades</label>
+                              <label class="form-label semibold" for="">Qtd. de unidades avaliativas</label>
                               <input type="text" class="form-control" id="" placeholder="000">
                             </fieldset>
                           </div>
