--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -79,7 +79,7 @@
                         <div class="row">
                           <div class="col-sm-6">
                             <fieldset class="form-group mb-0">
-                              <label class="form-label semibold" for="">Quatidade de unidades</label>
+                              <label class="form-label semibold" for="">Qtd. de unidades avaliativas</label>
                               <input type="text" class="form-control" id="" placeholder="000">
                             </fieldset>
                           </div>
@@ -825,7 +825,7 @@
                 </div>
                 <div class="row divider-top pb-md">
                   <div class="col-sm-4">
-                    <label class="form-label semibold" for=""> Quatidade de unidades <span
+                    <label class="form-label semibold" for=""> Qtd. de unidades avaliativas<span
                             class="semibold text-danger h4">*</span></label>
                     <input type="number" class="form-control" id="" placeholder="00">
                   </div>
@@ -949,11 +949,11 @@
           </header>
           <div class="card-block">
             <div class="row">
-              <div class="col-md-2">
-                <label class="form-label semibold">Unidades</label>
+              <div class="col-md-4">
+                <label class="form-label semibold">Qtd. de unidades avaliativas</label>
                 <p>0000</p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-4">
                 <label class="form-label semibold">Curso(s)</label>
                 <p>TEENS / Jovens e adultos</p>
               </div>
