Ajustes / Criação do controle de valores dos cursos

--- a/pages/posto/posto.html
+++ b/pages/posto/posto.html
@@ -638,7 +638,7 @@
                     </header>
                     <div class="card-block">
                       <div class="table-responsive">
-                        <table class="datatable-on table table-hover">
+                        <table class="table table-hover">
                           <thead class="hidden-iten">
                           <tr>
                             <th>Nome</th>
@@ -649,7 +649,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          <tr>
+                          <tr class="row-b-t-0">
                             <td><p>Luan Almeida Barbosa</p></td>
                             <td>
                               <ul class="chart-legend-list">
@@ -769,7 +769,7 @@
         <h4 class="modal-title">Contatos do posto avançado</h4>
       </div>
       <div class="modal-body">
-        <div class="row mb-lg">
+        <div class="row">
           <div class="col-sm-6">
             <label class="form-label semibold" for="">Nome</label>
             <input type="text" class="form-control" aria-label="" placeholder="Nome">
@@ -779,10 +779,10 @@
             <input type="email" class="form-control" aria-label="" placeholder="E-mail">
           </div>
         </div>
-        <div class="row mb-lg">
+        <div class="row mt-md">
           <div class="col-sm-12">
             <label class="form-label semibold" for="">Observações</label>
-            <textarea rows="4" class="form-control" placeholder="Objetivos"></textarea>
+            <textarea rows="4" class="form-control" placeholder="Observações"></textarea>
           </div>
         </div>
         <section class="card card-default mt-md">
