--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -405,23 +405,20 @@
                 </div>
               </div>
               <div class="row divider-top">
-                <div class="col-lg-2">
+                <div class="col-sm-4">
                   <label class="form-label semibold" for="">Idade mínima</label>
                   <input type="number" class="form-control" id="" placeholder="Idade">
                 </div>
-                <div class="col-lg-3">
+                <div class="col-sm-4">
                   <label class="form-label semibold" for="">Escolaridade</label>
                   <input type="text" class="form-control" id="" placeholder="Escolaridade">
                 </div>
-                <div class="col-lg-3">
-                  <label class="form-label semibold" for="">Valor</label>
-                  <input type="text" class="form-control" id="money-mask-input" placeholder="R$">
-                </div>
                 <div class="col-sm-4">
-                  <div class="checkbox-toggle mt-lg">
-                    <input type="checkbox" id="check-toggle-situacao"/>
-                    <label class="form-label" for="check-toggle-situacao">Ativo</label>
-                  </div>
+                  <label class="form-label semibold" for="">Classificação</label>
+                  <select class="select2 select2-arrow">
+                    <option>Nível único</option>
+                    <option>Multi níveis</option>
+                  </select>
                 </div>
               </div>
               <div class="row divider-top">
@@ -431,22 +428,122 @@
                     <label class="form-label" for="check-toggle-esp">Curso especial</label>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-4">
+                  <div class="checkbox-toggle mt-md">
+                    <input type="checkbox" id="check-toggle-situacao"/>
+                    <label class="form-label" for="check-toggle-situacao">Ativo</label>
+                  </div>
+                </div>
+                <div class="col-sm-4">
                   <label class="form-label semibold" for="">Data de criação</label>
                   <p>00/00/0000</p>
-                </div>
-                <div class="col-lg-4">
-                  <label class="form-label semibold" for="">Classificação</label>
-                  <select class="select2 select2-arrow">
-                    <option>Nível único</option>
-                    <option>Multi níveis</option>
-                  </select>
                 </div>
               </div>
               <div class="row divider-top">
                 <div class="col-sm-12">
                   <label class="form-label semibold" for="">Objetivos</label>
                   <textarea rows="4" class="form-control" placeholder="Objetivos"></textarea>
+                </div>
+              </div>
+
+              <div class="row mt-md">
+                <div class="col-sm-12">
+                  <section class="box-typical">
+                    <header class="box-typical-header header-bordered">
+                      <div class="tbl-row">
+                        <div class="tbl-cell tbl-cell-title">
+                          <h5 class="semibold"><i class="fa fa-money mr-xs" aria-hidden="true"></i> Valores
+                          </h5>
+                        </div>
+                        <div class="tbl-cell tbl-cell-action-bordered">
+                          <form>
+                            <button type="submit" class="action-btn" data-toggle="modal"
+                                    data-target="#ModalValores"><i
+                                    class="fa fa-plus-circle mr-xs"></i>Adicionar
+                            </button>
+                          </form>
+                        </div>
+                      </div>
+                    </header>
+                    <div class="card-block">
+                      <div class="table-responsive">
+                        <table class="table table-hover">
+                          <thead>
+                          <tr>
+                            <th>Data início</th>
+                            <th>Data fim</th>
+                            <th>Situação</th>
+                            <th>Valor</th>
+                            <th>Observação</th>
+                            <th class="text-right">Ações</th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr class="table-success">
+                            <td>00/00/0000</td>
+                            <td>00/00/0000</td>
+                            <td>Ativo</td>
+                            <td>R$450,00</td>
+                            <td>Alteração por reajuste inflacionário </td>
+                            <td class="text-right">
+                              <div class="btn-group btn-group-sm pull-right">
+                                <button type="button" class="btn btn-default-outline dropdown-toggle"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">Ações
+                                </button>
+                                <div class="dropdown-menu">
+                                  <a class="dropdown-item" href="posto--editar.html"><i
+                                          class="fa fa-pencil-square-o mr-xs"
+                                          aria-hidden="true"></i>
+                                    Editar</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
+                                                                       aria-hidden="true"></i>
+                                    Excluir</a>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr class="table-active-visual">
+                            <td>00/00/0000</td>
+                            <td>00/00/0000</td>
+                            <td>Ativo</td>
+                            <td>R$450,00</td>
+                            <td>Alteração por reajuste inflacionário </td>
+                            <td class="text-right">
+                              <div class="btn-group btn-group-sm pull-right">
+                                <button type="button" class="btn btn-default-outline dropdown-toggle"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">Ações
+                                </button>
+                                <div class="dropdown-menu">
+                                  <a class="dropdown-item" href="posto--editar.html"><i
+                                          class="fa fa-pencil-square-o mr-xs"
+                                          aria-hidden="true"></i>
+                                    Editar</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#"><i class="fa fa-ban mr-xs"
+                                                                       aria-hidden="true"></i>
+                                    Excluir</a>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr class="table-inactive">
+                            <td>00/00/0000</td>
+                            <td>00/00/0000</td>
+                            <td>Ativo</td>
+                            <td>R$450,00</td>
+                            <td>Alteração por reajuste inflacionário </td>
+                            <td class="text-right">
+                            </td>
+                          </tr>
+
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </section>
                 </div>
               </div>
 
@@ -655,6 +752,51 @@
 </div>
 
 
+
+<!-- Modal add valor -->
+<div class="modal fade" id="ModalValores" tabindex="-1" role="dialog" aria-labelledby="ModalValores">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Adicionar valor</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-sm-6">
+            <label class="form-label semibold" for="">Valor</label>
+            <input type="number" class="form-control" aria-label="" placeholder="Valor">
+          </div>
+          <div class="col-md-6">
+            <label class="form-label semibold" for="">Vigência</label>
+            <div class="row">
+              <div class="col-sm-6">
+                <input id="datetimepicker-inicial" type="text" value="" class="form-control" placeholder="Selecione a data inicial">
+              </div>
+              <div class="col-sm-6">
+                <input id="datetimepicker-final" type="text" value="" class="form-control" placeholder="Selecione a data final">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-md">
+          <div class="col-sm-12">
+            <label class="form-label semibold" for="">Observações</label>
+            <textarea rows="4" class="form-control" placeholder="Objetivos"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 <script src="../../js/lib/jquery/jquery.min.js"></script>
 <script src="../../js/lib/tether/tether.min.js"></script>
 <script src="../../js/lib/bootstrap/bootstrap.min.js"></script>
@@ -673,6 +815,16 @@
 
 <script src="../../js/lib/angular/angular.min.js"></script>
 <script src="../../js/lib/angular/controllers.js"></script>
+
+<script src="../../js/lib/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript">
+  $(function () {
+    $('#datetimepicker-inicial, #datetimepicker-final').datetimepicker({
+      locale: 'pt-br',
+      format: "DD/MM/YYYY"
+    });
+  });
+</script>
 
 </body>
 </html>
