--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -783,7 +783,7 @@
         <div class="row mt-md">
           <div class="col-sm-12">
             <label class="form-label semibold" for="">Observações</label>
-            <textarea rows="4" class="form-control" placeholder="Objetivos"></textarea>
+            <textarea rows="4" class="form-control" placeholder="Observações"></textarea>
           </div>
         </div>
       </div>
