--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -804,7 +804,7 @@
                   </div>
                 </div>
                 <div class="row mt-md divider-top">
-                  <div class="col-md-6">
+                  <div class="col-sm-4">
                     <label class="form-label semibold" for="">Selecione um curso <span
                             class="semibold text-danger h4">*</span></label>
                     <select class="select2 select2-arrow">
@@ -815,19 +815,25 @@
                       <option>JUNIOR</option>
                     </select>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-sm-4">
                     <fieldset class="form-group">
                       <label class="form-label semibold" for="">Nome do nível <span
                               class="semibold text-danger h4">*</span></label>
                       <input type="text" class="form-control" id="" placeholder="Nome do nível">
                     </fieldset>
                   </div>
-                </div>
-                <div class="row divider-top pb-md">
                   <div class="col-sm-4">
                     <label class="form-label semibold" for=""> Qtd. de unidades avaliativas<span
                             class="semibold text-danger h4">*</span></label>
                     <input type="number" class="form-control" id="" placeholder="00">
+                  </div>
+                </div>
+                <div class="row divider-top pb-md">
+                  <div class="col-sm-4">
+                    <div class="checkbox-toggle mt-lg">
+                      <input type="checkbox" id="check-matdid">
+                      <label for="check-matdid">Material didático obrigatório</label>
+                    </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="checkbox-toggle mt-lg">
@@ -841,6 +847,7 @@
                       <label for="check-Certificado">Certificado</label>
                     </div>
                   </div>
+
                 </div>
                 <div class="row">
                   <div class="col-sm-12">
