Ajustes em curso

--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -416,7 +416,7 @@
                 <div class="col-sm-4">
                   <div class="checkbox-toggle mt-md pt-sm">
                     <input type="checkbox" id="check-qtd-niveis" checked/>
-                    <label class="form-label" for="check-qtd-niveis">Multiníveis</label>
+                    <label class="form-label" for="check-qtd-niveis">Multinível</label>
                   </div>
                 </div>
               </div>
@@ -478,7 +478,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          <tr class="table-success">
+                          <tr class="table-active-next">
                             <td>00/00/0000</td>
                             <td>00/00/0000</td>
                             <td>Ativo</td>
@@ -628,6 +628,57 @@
             </div>
           </div>
         </section>
+
+
+        <section class="card card-default mt-md">
+          <header class="card-header">
+            <h5 class="semibold"><i class="fa fa-money mr-xs" aria-hidden="true"></i> Valores</h5>
+          </header>
+          <div class="card-block">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="table-responsive">
+                  <table class="table table-hover">
+                    <thead>
+                    <tr>
+                      <th>Data início</th>
+                      <th>Data fim</th>
+                      <th>Situação</th>
+                      <th>Valor</th>
+                      <th>Observação</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class="table-active-next">
+                      <td>00/00/0000</td>
+                      <td>00/00/0000</td>
+                      <td>Ativo</td>
+                      <td>R$450,00</td>
+                      <td>Alteração por reajuste inflacionário </td>
+                    </tr>
+                    <tr class="table-active-visual">
+                      <td>00/00/0000</td>
+                      <td>00/00/0000</td>
+                      <td>Ativo</td>
+                      <td>R$450,00</td>
+                      <td>Alteração por reajuste inflacionário </td>
+                    </tr>
+                    <tr class="table-inactive">
+                      <td>00/00/0000</td>
+                      <td>00/00/0000</td>
+                      <td>Ativo</td>
+                      <td>R$450,00</td>
+                      <td>Alteração por reajuste inflacionário </td>
+                    </tr>
+
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
 
         <section class="card card-default mt-md">
           <header class="card-header">
