Alterações em níveis

--- a/pages/academico/niveis.html
+++ b/pages/academico/niveis.html
@@ -181,7 +181,7 @@
                         <tr>
                           <th>Nome do nível</th>
                           <th>Curso</th>
-                          <th>Certificados</th>
+                          <th>Certificado</th>
                           <th>Situação</th>
                           <th class="text-right">Ações</th>
                         </tr>
