--- a/pages/academico/grupos.html
+++ b/pages/academico/grupos.html
@@ -307,9 +307,9 @@
               <div class="row mt-md divider-top">
                 <div class="col-lg-9">
                   <fieldset class="form-group">
-                    <label class="form-label semibold" for="">Nome do grupo <span
+                    <label class="form-label semibold" for="">Nome<span
                             class="semibold text-danger h4">*</span></label>
-                    <input type="text" class="form-control" id="" placeholder="Nome do grupo">
+                    <input type="text" class="form-control" id="" placeholder="Nome">
                   </fieldset>
                 </div>
                 <div class="col-sm-3">
