--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -191,7 +191,7 @@
                           <p class="text-warning ml-md text-center"><i class="fa fa-exclamation-triangle mr-xs"
                                                                aria-hidden="true"></i>
                             <strong>Pendência:</strong><br/>
-                            Não existem materiais didáticos assossiados
+                            Não existem materiais didáticos associados
                           </p>
                         </div>
                       </div>
